All: don't supress debugger warning with alert

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -525,7 +525,7 @@
                msg + '\n' +
               'URL: '+ url +'\n' +
               'Line Number: '+ linenumber)
-        return true
+        return false
     }
 
     setup_plots()
