--- a/FilterTool/index.html
+++ b/FilterTool/index.html
@@ -351,7 +351,7 @@ ArduPilot 4.2 filter setup.
              msg + '\n' +
             'URL: '+ url +'\n' +
             'Line Number: '+ linenumber)
-      return true
+      return false
   }
 
   var calc_btn = document.getElementById('calculate');
