--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -239,7 +239,7 @@
             msg + '\n' +
             'URL: '+ url +'\n' +
             'Line Number: '+ linenumber)
-      return true
+      return false
   }
 
 </script>
