Make all titles self-link

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -22,7 +22,7 @@
 </td></tr></table>
 
 <table><tr><td style="width:1200px">
-<h1 style="text-align:center">ArduPilot Filter Review Tool</h1>
+<h1 style="text-align:center"><a href="" style="color: #000000; text-decoration:none;">ArduPilot Filter Review Tool</a></h1>
 </td></tr></table>
 
 <body>
