--- a/FilterTool/index.html
+++ b/FilterTool/index.html
@@ -30,7 +30,7 @@
         }
 </style>
 
-<h1>ArduPilot Filter Analysis</h1>
+<h1><a href="" style="color: #000000; text-decoration:none;">ArduPilot Filter Analysis</a></h1>
 
 The following form will display the attenuation and phase lag for an
 ArduPilot 4.2 filter setup.
