--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -30,7 +30,7 @@
   }
 </style>
 
-<h1>ArduPilot Hardware Report</h1>
+<h1><a href="" style="color: #000000; text-decoration:none;">ArduPilot Hardware Report</a></h1>
 
 <body onload="initial_load(); reset();">
 <input id="fileItem" type="file" accept=".param,.parm,.bin" onchange="load(this)">
