--- a/PIDReview/index.html
+++ b/PIDReview/index.html
@@ -19,7 +19,7 @@
 </td></tr></table>
 
 <table><tr><td style="width:1200px">
-<h1 style="text-align:center">ArduPilot PID Review Tool</h1>
+<h1 style="text-align:center"><a href="" style="color: #000000; text-decoration:none;">ArduPilot PID Review Tool</a></h1>
 </td></tr></table>
 
 <body>
