FilterReview: use new fft helper lib

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="../Libraries/Array_Math.js"></script>
 <script type="text/javascript" src="../Libraries/FileSaver.js"></script>
 <script type="text/javascript" src="../Libraries/ParameterMetadata.js"></script>
+<script type="text/javascript" src="../Libraries/fft.js"></script>
 
 </head>
 <table style="width:1200px"><tr><td>
