PIDReview: use new fft helper lib

--- a/PIDReview/index.html
+++ b/PIDReview/index.html
@@ -8,6 +8,7 @@
 <script src="https://unpkg.com/browser-cjs/require.min.js"></script>
 <script type="text/javascript" src="PIDReview.js"></script>
 <script type="text/javascript" src="../Libraries/Array_Math.js"></script>
+<script type="text/javascript" src="../Libraries/fft.js"></script>
 
 </head>
 <table style="width:1200px"><tr><td>
