--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="../Libraries/FileSaver.js"></script>
 <script type="text/javascript" src="../Libraries/ParameterMetadata.js"></script>
 <script type="text/javascript" src="../Libraries/fft.js"></script>
+<script type="text/javascript" src="../Libraries/OpenIn.js"></script>
 
 </head>
 <table style="width:1200px"><tr><td>
@@ -86,6 +87,7 @@
             <td style="width: 10px;"></td>
             <td>
                 <input id="fileItem" type="file" accept=".bin" onchange="readFile(this)"><br><br>
+                <div id="OpenIn"></div><br><br>
                 <input type="button" id="calculate" value="Calculate" onclick="re_calc()">
             </td>
         </tr>
@@ -551,5 +553,7 @@
         }
         reader.readAsArrayBuffer(file)
     }
+
+    setup_open_in("OpenIn", "fileItem", load)
 
 </script>
