--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="../Libraries/fft.js"></script>
 <script type="text/javascript" src="../Libraries/OpenIn.js"></script>
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
+<script type="text/javascript" src="../Libraries/Plotly_helpers.js"></script>
 
 </head>
 <table style="width:1200px"><tr><td>
