--- a/FilterTool/index.html
+++ b/FilterTool/index.html
@@ -7,6 +7,8 @@
 <script type="text/javascript" src="../Libraries/FileSaver.js"></script>
 <script type="text/javascript" src="../Libraries/Array_Math.js"></script>
 <script type="text/javascript" src="../Libraries/ParameterMetadata.js"></script>
+<script type="text/javascript" src="../Libraries/Plotly_helpers.js"></script>
+
 <script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
 <script src="https://unpkg.com/mathjs/lib/browser/math.js"></script>
 </head>
