--- a/PIDReview/index.html
+++ b/PIDReview/index.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="../Libraries/fft.js"></script>
 <script type="text/javascript" src="../Libraries/OpenIn.js"></script>
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
+<script type="text/javascript" src="../Libraries/Plotly_helpers.js"></script>
 
 </head>
 <table style="width:1200px"><tr><td>
