All: move some param functionality to param libraries

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="../Libraries/Array_Math.js"></script>
 <script type="text/javascript" src="../Libraries/FileSaver.js"></script>
 <script type="text/javascript" src="../Libraries/ParameterMetadata.js"></script>
+<script type="text/javascript" src="../Libraries/Param_Helpers.js"></script>
 <script type="text/javascript" src="../Libraries/fft.js"></script>
 <script type="text/javascript" src="../Libraries/OpenIn.js"></script>
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
@@ -34,12 +35,6 @@
 <style>
     div.plotly-notifier {
         visibility: hidden;
-    }
-
-    label.parameter_input_label {
-        display: inline-block;
-        width: 165px;
-        margin:5px 0px;
     }
 </style>
 
