--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -9,6 +9,8 @@
 <script type="text/javascript" src="../Libraries/Array_Math.js"></script>
 <script type="text/javascript" src="../Libraries/OpenIn.js"></script>
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
+<script type="text/javascript" src="../Libraries/Param_Helpers.js"></script>
+
 <script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
 
 </head>
@@ -23,12 +25,6 @@
 <style>
   div.plotly-notifier {
     visibility: hidden;
-  }
-
-  label.parameter_input_label {
-    display: inline-block;
-    width: 165px;
-    margin:5px 0px;
   }
 </style>
 
