MAGFit: add yaw change plots

--- a/MAGFit/index.html
+++ b/MAGFit/index.html
@@ -114,7 +114,14 @@
 <div id="mag_plot_z" style="width:1200px;height:300px"></div>
 
 <table><tr><td style="width:1200px">
-    <h2 style="text-align:center">Calibration error</h2>
+    <h2 style="text-align:center">Yaw change</h2>
+</td></tr></table>
+
+<div id="yaw_change_mag" style="width:1200px;height:300px"></div>
+<div id="yaw_change_att" style="width:1200px;height:300px"></div>
+
+<table><tr><td style="width:1200px">
+    <h2 style="text-align:center">Fit error</h2>
 </td></tr></table>
 
 <div id="error_plot" style="width:1200px;height:300px"></div>
