MAGFit: add feild lenght and motor comp plots

--- a/MAGFit/index.html
+++ b/MAGFit/index.html
@@ -121,6 +121,18 @@
 <div id="yaw_change_att" style="width:1200px;height:300px"></div>
 
 <table><tr><td style="width:1200px">
+    <h2 style="text-align:center">Field length</h2>
+</td></tr></table>
+
+<div id="field_length" style="width:1200px;height:300px"></div>
+
+<table><tr><td style="width:1200px">
+    <h2 style="text-align:center">Motor compensation sources</h2>
+</td></tr></table>
+
+<div id="motor_comp" style="width:1200px;height:300px"></div>
+
+<table><tr><td style="width:1200px">
     <h2 style="text-align:center">Fit error</h2>
 </td></tr></table>
 
