MAGFit: fixup param disaplay and save

--- a/MAGFit/index.html
+++ b/MAGFit/index.html
@@ -144,6 +144,7 @@
         <td>
             <fieldset>
                 <legend>Compass 1 parameters</legend>
+                <p id="MAG_1_PARAM_INFO"></p>
                 <p>
                     <input id="COMPASS_ORIENT" name="COMPASS_ORIENT" type="number" style="width: 100px"/>
                 </p>
@@ -183,6 +184,7 @@
         <td>
             <fieldset style="width:350px">
                 <legend>Compass 2 parameters</legend>
+                <p id="MAG_2_PARAM_INFO"></p>
                 <p>
                     <input id="COMPASS_ORIENT2" name="COMPASS_ORIENT2" type="number" style="width: 100px"/>
                 </p>
@@ -222,6 +224,7 @@
         <td>
             <fieldset style="width:350px">
                 <legend>Compass 3 parameters</legend>
+                <p id="MAG_3_PARAM_INFO"></p>
                 <p>
                     <input id="COMPASS_ORIENT3" name="COMPASS_ORIENT3" type="number" style="width: 100px"/>
                 </p>
