LandingPage: fix relative images

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
 </head>
 <table style="width:1200px"><tr><td>
-  <a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
+  <a href="https://ardupilot.org"><img src="images/ArduPilot.png"></a>
 </td><td>
-  <a href="https://github.com/ArduPilot/WebTools"><img src="../images/github-mark.png" style="width:60px"></a>
+  <a href="https://github.com/ArduPilot/WebTools"><img src="images/github-mark.png" style="width:60px"></a>
   <br>
-  <a href="https://github.com/ArduPilot/WebTools"><img src="../images/GitHub_Logo.png" style="width:60px"></a>
+  <a href="https://github.com/ArduPilot/WebTools"><img src="images/GitHub_Logo.png" style="width:60px"></a>
 </td></tr></table>
 
 <h1 style="text-align:center; width:1200px"><a href="" style="color: #000000; text-decoration:none;">ArduPilot Web Tools</a></h1>
@@ -26,7 +26,7 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
 
   <tr>
     <td>
-      <a href="https://plot.ardupilot.org/#/" style="margin: 20px; display: inline-block;"><img src="../images/UAVLogViewer_Icon.gif" style="width:200px"></a>
+      <a href="https://plot.ardupilot.org/#/" style="margin: 20px; display: inline-block;"><img src="images/UAVLogViewer_Icon.gif" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
       <h2>UAV Log viewer</h2>
@@ -36,7 +36,7 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
 
   <tr>
     <td>
-      <a href="./HardwareReport" style="margin: 20px; display: inline-block;"><img src="../images/HardwareReport_Icon.png" style="width:200px"></a>
+      <a href="./HardwareReport" style="margin: 20px; display: inline-block;"><img src="images/HardwareReport_Icon.png" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
       <h2>Hardware Report</h2>
@@ -47,7 +47,7 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
 
   <tr>
     <td>
-      <a href="./FilterReivew" style="margin: 20px; display: inline-block;"><img src="../images/FilterReview_Icon.png" style="width:200px"></a>
+      <a href="./FilterReivew" style="margin: 20px; display: inline-block;"><img src="images/FilterReview_Icon.png" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
       <h2>Filter Review</h2>
@@ -57,7 +57,7 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
 
   <tr>
     <td>
-      <a href="./PIDReivew" style="margin: 20px; display: inline-block;"><img src="../images/PIDReview_Icon.png" style="width:200px"></a>
+      <a href="./PIDReivew" style="margin: 20px; display: inline-block;"><img src="images/PIDReview_Icon.png" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
       <h2>PID Review</h2>
@@ -68,7 +68,7 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
 
   <tr>
     <td>
-      <a href="./FilterTool" style="margin: 20px; display: inline-block;"><img src="../images/FilterTool_Icon.png" style="width:200px"></a>
+      <a href="./FilterTool" style="margin: 20px; display: inline-block;"><img src="images/FilterTool_Icon.png" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
       <h2>Filter Tool</h2>
