LandingPage: more fixups

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
 
   <tr>
     <td>
-      <a href="./FilterReivew" style="margin: 20px; display: inline-block;"><img src="images/FilterReview_Icon.png" style="width:200px"></a>
+      <a href="./FilterReview" style="margin: 20px; display: inline-block;"><img src="images/FilterReview_Icon.png" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
       <h2>Filter Review</h2>
@@ -57,7 +57,7 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
 
   <tr>
     <td>
-      <a href="./PIDReivew" style="margin: 20px; display: inline-block;"><img src="images/PIDReview_Icon.png" style="width:200px"></a>
+      <a href="./PIDReview" style="margin: 20px; display: inline-block;"><img src="images/PIDReview_Icon.png" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
       <h2>PID Review</h2>
