--- a/MAGFit/index.html
+++ b/MAGFit/index.html
@@ -277,6 +277,17 @@
 
 <script>
 
+    window.onerror = function(msg, url, linenumber) {
+        alert('Sorry, something went wrong.\n\n' + 
+                'Please try a hard reload of this page to clear its cache.\n\n' +
+                'If the error persists open an issue on the GitHub repo.\n' +
+                'Include a copy of the log and the following error message:\n\n' +
+                msg + '\n' +
+                'URL: '+ url +'\n' +
+                'Line Number: '+ linenumber)
+        return false
+    }
+
     // load parameter metadata
     let params = []
     for (let i = 0; i < 3; i++) {
