LandingPage: add MAGFit

--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
 
   <tr>
     <td>
+      <a href="./MAGFit" style="margin: 20px; display: inline-block;"><img src="images/MAGFit_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>MAGFit</h2>
+      Calibrate compass from flight log. This tool fits the logged magnetometer data to the world magnetic model providing offsets, iron correction, scale, motor compensation and checking orientation.
+    </td>
+  </tr>
+
+  <tr>
+    <td>
       <a href="./FilterReview" style="margin: 20px; display: inline-block;"><img src="images/FilterReview_Icon.png" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
