FilterTool: fix "get link" formating and parsing.

--- a/FilterTool/index.html
+++ b/FilterTool/index.html
@@ -96,7 +96,7 @@ ArduPilot 4.2 filter setup.
   <legend>INS Settings</legend>
         <p>
                 <label for="GyroSampleRate">Gyro Sample Rate</label>
-                <input id="GyroSampleRate" name="GYRO_SAMPLE_RATE" type="number" step="1" value="2000"/>
+                <input id="GyroSampleRate" name="GyroSampleRate" type="number" step="1" value="2000"/>
 	</p>
         <p>
                 <input id="INS_GYRO_FILTER" name="INS_GYRO_FILTER" type="number" step="0.1" value="20.0" style="width: 100px"/>
