HardwareReport: add log stats pie chart

--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -235,6 +235,10 @@
 <h3 hidden>Files</h3>
 <p id="FILES"></p>
 
+<h3 hidden>Log stats</h3>
+<p id="LOGSTATS"></p>
+<div id="log_stats" style="width:800px;height:800px"></div>
+
 <script>
 
   window.onerror = function(msg, url, linenumber) {
